--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -49,12 +49,12 @@
 
 \lstset{style=mystyle}
 
-\title{Título de la tesis}
-\author{\\\vspace{0.25cm}Nombre del autor}
-\advisor{\\\vspace{0.25cm}Nombre del primer tutor\\\vspace{0.2cm}Nombre del segundo tutor}
-\degree{Licenciado en (Matemática o Ciencia de la Computación)}
+\title{Sistema para la generación de resúmenes textuales de eventos deportivos independientes de la fuente de datos.}
+\author{\\\vspace{0.25cm}Abel Molina Sánchez}
+\advisor{\\\vspace{0.25cm}Dr. Yudivián Almeida Cruz\\\vspace{0.2cm}Lic. Manuel Santiago Fernández Arias}
+\degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
-\date{Fecha\\\vspace{0.25cm}\href{https://github.com/username/repo}{github.com/username/repo}}
+\date{Fecha\\\vspace{0.25cm}\href{https://github.com/abel1927/Thesis}{github.com/abel1927/Thesis}}
 \logo{Graphics/uhlogo}
 \makenomenclature
 
