--- a/document/MainMatter/Introduction.tex
+++ b/document/MainMatter/Introduction.tex
@@ -2,8 +2,8 @@
 \addcontentsline{toc}{chapter}{Introducción}
 
     Desde hace varios años la Inteligencia Artificial(IA) viene revolucionando e \\impactando significativamente en muchas esferas de la 
-vida de la vida del hombre. Dentro de la IA hay muchos campos de estudios y entre ellos el  Procesamiento de Lenguaje Natural(PLN) es 
-el encargado de lidiar con las problématicas relacionadas con el lenguaje humano. Uno de los subcampos dentro del PLN que está 
+vida del hombre. Dentro de la IA hay muchos campos de estudios y entre ellos el Procesamiento de Lenguaje Natural(PLN) es 
+el encargado de lidiar con las problem\'aticas relacionadas con el lenguaje humano. Uno de los subcampos dentro del PLN que está 
 acaparando especial atención en los últimos tiempos es el de la Generación de Lenguaje Natural(GLN) y en especial aquel que está 
 enfocado a expresar a través de texto información contenida en forma de datos no lingüísticos(D2T por sus siglas en inglés, Data-to-Text). 
 Existe consenso en la forma en que la salida de un sistema de GLN debe presentarse: texto, valga la redundancia, pero no hay un est\'andar 
@@ -13,15 +13,15 @@ comunicativa, no siendo lo mismo un sistema para la generación de diálogos que
 
     En un contexto donde la producción de datos se ha acelerado resultado de los avances tecnológicos y de los sistemas industriales, se ha hecho necesario para 
 las empresas el manejo y la interpretación de estos datos. Empresas como \\ \textit{Automated Insights\footnote[1]{https://automatedinsights.com/}} 
-se han especializado en la GLN y han enfocado su negocio en brindar soluciones a otras corporaciones en vista a automatizar sus procesos de producción de texto. 
+se han especializado en la GLN y han enfocado su negocio en brindar soluciones a otras corporaciones con vista a automatizar sus procesos de producción de texto. 
 Entre los casos de uso clásico de estas soluciones encontramos, en el marco del comercio electr\'onico, la generación de descripciones de productos a partir de sus 
 fichas técnicas. El periodismo ha sido otra de las esferas beneficiadas de estos avances en la GLN. La generación automática de noticias(conocida como periodismo robótico) 
-está cada vez más extendida, al punto de que importantes editoriales como \textit{The Washingtong Post} han creado sus propios sistemas para la generación de texto a partir 
+está cada vez más extendida, al punto de que importantes editoriales como \textit{The Washington Post} han creado sus propios sistemas para la generación de texto a partir 
 de datos\footnote[2]{https://www.washingtonpost.com/pr/wp/2017/09/01/the-washington-post-leverages-heliograf-to-cover-high-school-football/}. 
 En este caso su sistema se apoda \textit{Heliograf} y les permite cubrir todos los partidos de fútbol americano de las escuelas secundarias del área de Washington DC 
 cada semana.
 
-    Por su carácter estadístico y su gran audiencia, el deporte es una de las esferas que brinda grandes posibilidades para desarrollar sistemas 
+    Por su carácter estadístico y su gran audiencia, el deporte es una de las esferas que brinda diversas posibilidades para desarrollar sistemas 
 de generación automática de texto. Es relativamente sencillo encontrar en la web los datos o tablas estadísticas de un determinado enfrementamiento deportivo, 
 pero la gran variedad de eventos que se suceden constantemente hacen que sea humanamente imposible darle coberturas a cada uno de ellos a nivel de narración y 
 resúmenes. A partir de lo cual surgen soluciones que cubren determinados eventos de interés como el ejemplo mencionado en el párrafo anterior.\\
@@ -46,7 +46,7 @@ acercar el prisma hacia los mismos desde el punto de vista de la GLN.\\
     \textbf{Motivaciones}\\
 
     La propuesta del presente trabajo está motivada en las problemáticas anteriores. Siendo el deporte un campo que despierta tanto 
-interés y que es fuente de entretenamiento de tantas personas, sentar las bases de una metodología para la generación de resúmenes de 
+interés y que es fuente de entretenamiento de muchas personas, sentar las bases de una metodología para la generación de resúmenes de 
 eventos deportivos es un reto estimulante.
 
     En el presente trabajo se presenta un sistema capaz de generar resúmenes de eventos deportivos a partir de los datos prove\'idos por 
